--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiple 3D Models Example</title>
+    <title>3D Model Viewer</title>
     <style>
         body { margin: 0; }
         canvas { display: block; }
@@ -36,35 +36,23 @@
             });
         }
 
-        // Scene 1
-        const scene1 = new THREE.Scene();
+        // Scene
+        const scene = new THREE.Scene();
 
-        // Camera 1
-        const camera1 = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera1.position.z = 5;
+        // Camera
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 5;
 
-        // Renderer 1
-        const renderer1 = new THREE.WebGLRenderer();
-        renderer1.setSize(window.innerWidth / 2, window.innerHeight);
-        document.body.appendChild(renderer1.domElement);
+        // Renderer
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-        // Load Model 1
-        loadModel('obj/iilyakut_cami_obj.obj', 'obj/iilyakut_cami_obj.mtl', 'obj/iilyakut_cami_obj', scene1, camera1, renderer1);
-
-        // Scene 2
-        const scene2 = new THREE.Scene();
-
-        // Camera 2
-        const camera2 = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera2.position.z = 5;
-
-        // Renderer 2
-        const renderer2 = new THREE.WebGLRenderer();
-        renderer2.setSize(window.innerWidth / 2, window.innerHeight);
-        document.body.appendChild(renderer2.domElement);
-
-        // Load Model 2
-        loadModel('obj_catisiz/proje_ilyakut_catisiz.obj', 'obj_catisiz/proje_ilyakut_catisiz.mtl', 'obj_catisiz/proje_ilyakut_catisiz', scene2, camera2, renderer2);
+        // Load Model
+        loadModel('https://raw.githubusercontent.com/bugcegokce/ilyakut_mosque_3d_model/tree/main/obj/iilyakut_cami_obj', 
+                  'https://raw.githubusercontent.com/bugcegokce/ilyakut_mosque_3d_model/blob/main/obj/iilyakut_cami_obj.mtl', 
+                  'https://raw.githubusercontent.com/bugcegokce/ilyakut_mosque_3d_model/blob/main/obj/iilyakut_cami_obj/Basic_Tile.jpg', 
+                  scene, camera, renderer);
 
         // Animation
         const animate = function () {
@@ -72,8 +60,7 @@
 
             // Add your animations or interactions here
 
-            renderer1.render(scene1, camera1);
-            renderer2.render(scene2, camera2);
+            renderer.render(scene, camera);
         };
 
         animate();
