--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <script type="module">
-        import * as THREE from 'https://unpkg.com/three@latest/build/three.module.js';
-        import { OBJLoader } from 'https://unpkg.com/three@latest/examples/jsm/loaders/OBJLoader.js';
-        import { MTLLoader } from 'https://unpkg.com/three@latest/examples/jsm/loaders/MTLLoader.js';
+        import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
+        import { OBJLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/OBJLoader.js';
+        import { MTLLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/MTLLoader.js';
 
         // Function to load OBJ and MTL
         function loadModel(objPath, mtlPath, scene, camera, renderer) {
