--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <script type="module">
-        import * as THREE from "../node_modules/three/build/three.module.js ;
+        import * as THREE from '../node_modules/three/build/three.module.js' ;
         import { OBJLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/OBJLoader.js';
         import { MTLLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/MTLLoader.js';
 
