--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <script type="module">
-        import * as THREE from './src/Three.js'; // three.module.js dosyanızın yolunu doğru şekilde güncelleyin
-        import { OBJLoader } from './examples/jsm/loaders/OBJLoader.js'; // OBJLoader.js dosyanızın yolunu doğru şekilde güncelleyin
-        import { MTLLoader } from './examples/jsm/loaders/MTLLoader.js'; // MTLLoader.js dosyanızın yolunu doğru şekilde güncelleyin
+        import * as THREE from './bugcegokce/three.js'; // three.module.js dosyanızın yolunu doğru şekilde güncelleyin
+        import { OBJLoader } from './bugcegokce/examples/jsm/loaders/OBJLoader.js'; // OBJLoader.js dosyanızın yolunu doğru şekilde güncelleyin
+        import { MTLLoader } from './bugcegokce/examples/jsm/loaders/MTLLoader.js'; // MTLLoader.js dosyanızın yolunu doğru şekilde güncelleyin
 
         // Function to load OBJ, MTL, and Textures
         function loadModel(objPath, mtlPath, texturePath, scene, camera, renderer) {
