--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <script type="module">
-        import * as THREE from './three.module.js'; // three.module.js dosyanızın yolunu doğru şekilde güncelleyin
-        import { OBJLoader } from './OBJLoader.js'; // OBJLoader.js dosyanızın yolunu doğru şekilde güncelleyin
-        import { MTLLoader } from './MTLLoader.js'; // MTLLoader.js dosyanızın yolunu doğru şekilde güncelleyin
+        import * as THREE from '/three.module.js'; // three.module.js dosyanızın yolunu doğru şekilde güncelleyin
+        import { OBJLoader } from '/OBJLoader.js'; // OBJLoader.js dosyanızın yolunu doğru şekilde güncelleyin
+        import { MTLLoader } from '/MTLLoader.js'; // MTLLoader.js dosyanızın yolunu doğru şekilde güncelleyin
 
         // Function to load OBJ, MTL, and Textures
         function loadModel(objPath, mtlPath, texturePath, scene, camera, renderer) {
