--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OBJ Model Viewer</title>
-    <script type="module" src="path/to/your/main.js"></script>
+    <script type="module" src="main.js"></script>
 </head>
 <body>
 </body>
