--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OBJ Model Viewer</title>
-    <script type="module" src="main.js"></script>
+    <title>3D Model Viewer</title>
+    <script type="module">
+        import * as THREE from 'https://cdn.skypack.dev/three@110.0.1/build/three.module.js';
+        import { OBJLoader } from 'https://cdn.skypack.dev/three@110.0.1/examples/jsm/loaders/OBJLoader.js';
+
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        const loader = new OBJLoader();
+        loader.load(
+            'obj/iilyakut_cami_obj.obj',
+            (object) => {
+                scene.add(object);
+            },
+            (xhr) => {
+                console.log((xhr.loaded / xhr.total) * 100 + '% loaded');
+            },
+            (error) => {
+                console.error('Error loading the OBJ model', error);
+            }
+        );
+
+        camera.position.z = 5;
+
+        const animate = () => {
+            requestAnimationFrame(animate);
+            renderer.render(scene, camera);
+        };
+
+        animate();
+    </script>
 </head>
 <body>
 </body>
