--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Model Viewer</title>
     <script type="module">
-        import * as THREE from 'https://cdn.skypack.dev/three@110.0.1/build/three.module.js';
+        import * as THREE from 'https://cdn.skypack.dev/three@110.0.1/node_modules/three/build/three.module.js';
         import { OBJLoader } from 'https://cdn.skypack.dev/three@110.0.1/examples/jsm/loaders/OBJLoader.js';
 
         const scene = new THREE.Scene();
